--- a/app/views/portfolio/index.html.erb
+++ b/app/views/portfolio/index.html.erb
@@ -1,12 +1,6 @@
-
-
-     <div class="container">
+<div class="center jumbotron">
          <h2>DURON EPPS</h2>
-    <img src="http://www.masymbol.com/assets/masymbol/web_dev.png" class="img-responsive" > 
-    <div class="content">
-      
-  
-  </div>
+         
   </div>
 
 
