--- a/app/views/portfolio/portfolio.html.erb
+++ b/app/views/portfolio/portfolio.html.erb
@@ -9,9 +9,9 @@
       <h3>Ask about the universe web App</h3>
          <p>This is a web app i made where you can ask question about the universe and then people can answer your questions</p>
      <a href="https://fast-fjord-85254.herokuapp.com/">Ask questions about the universe Website</a>
-      <div class="img-responsive">
-      <%= image_tag "/assets/app1.png" %> 
-      </div>
+      
+      <%= image_tag "/assets/app1.png", :class => "img-responsive" %> 
+      
          
   
   </div>
