--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">DE WEB PORTFOLIO</a>
+      
+      <%= link_to 'DE WEB PORTFOLIO', root_path, class: "navbar-brand", id:"logo" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -36,16 +37,16 @@
      
       
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to 'Home', root_path%></li>
-        <li><%= link_to 'About', portfolio_about_path %></li>
-        <li><%= link_to 'Portfolio', portfolio_portfolio_path %></li>
-       <!-- <li><%= link_to 'Contact', portfolio_contact_path %></li>
+        <li><%= link_to 'Home', root_path, id: "nav"%></li>
+        <li><%= link_to 'About', portfolio_about_path, id: "nav" %></li>
+        <li><%= link_to 'Portfolio', portfolio_portfolio_path, id: "nav" %></li>
+       <!-- <li><%= link_to 'Contact', portfolio_contact_path, id: "nav" %></li>
         -->
         </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-<div class="wrapper">
+<div class="container">
 
 <%= yield %>
 </div>
