--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+<script src="https://unpkg.com/masonry-layout@4.1/dist/masonry.pkgd.js"></script>
+<!-- or -->
+<script src="https://unpkg.com/masonry-layout@4.1/dist/masonry.pkgd.min.js"></script>
+
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
@@ -35,13 +39,42 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
      
+      <% if admin_signed_in? %>
+      <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to 'New Post', new_post_path, id: "nav" %></li>
+        <li><%= link_to 'Home', root_path, id: "nav"%></li>
+        <li><%= link_to 'About', portfolio_about_path, id: "nav" %></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="nav" role="button" aria-haspopup="true" aria-expanded="false">Portfolio <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><%= link_to 'Web Apps', portfolio_webapp_path %></li>
+          <li><%= link_to 'Game Art', portfolio_art_path %></li>
+            </ul>
+            <li><%= link_to "Sign Out", destroy_admin_session_path, method: :delete, id:"nav" %></li>
+        </li>
+        
+      </ul>
       
+      </ul>
+      
+      
+      <% else %>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to 'Home', root_path, id: "nav"%></li>
         <li><%= link_to 'About', portfolio_about_path, id: "nav" %></li>
-        <li><%= link_to 'Portfolio', portfolio_portfolio_path, id: "nav" %></li>
-       <!-- <li><%= link_to 'Contact', portfolio_contact_path, id: "nav" %></li>
-        -->
+           <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="nav" role="button" aria-haspopup="true" aria-expanded="false">Portfolio <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><%= link_to 'Web Apps', portfolio_webapp_path %></li>
+          <li><%= link_to 'Game Art', portfolio_art_path %></li>
+            </ul>
+        </li>
+      </ul>
+      </ul
+       
+        
+        
+        <% end %>
         </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -50,6 +83,14 @@
 
 <%= yield %>
 </div>
+
+<footer>
+  <div class="panel panel-default">
+  <div class="panel-body center">
+    <%= link_to 'Admin', new_admin_session_path %>
+    </div>
+</div>
+</footer>
 
 </body>
 </html>
