added contact form admin page porfolio uploader

--- a/app/views/portfolio/index.html.erb
+++ b/app/views/portfolio/index.html.erb
@@ -1,6 +1,16 @@
 <div class="center jumbotron">
          <h2>DURON EPPS</h2>
-         
+       
+  
   </div>
 
-
+       <div class="grid">
+                <#% @posts.each do |post| %>
+  <!-- width of .grid-sizer used for columnWidth -->
+  <div class="grid-sizer"></div>
+  <div class="grid-item"></div>
+  <div class="grid-item grid-item--width2"></div>
+  
+  ...
+  <#% end %>
+</div>
