--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -23,8 +23,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="nav" role="button" aria-haspopup="true" aria-expanded="false">Portfolio <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><%= link_to 'Web Apps', portfolio_webapp_path, id: "nav" %></li>
-          <li><%= link_to 'Game Art', portfolio_art_path, id: "nav" %></li>
+          <li><%= link_to 'Web Apps', portfolio_webapp_path%></li>
+          <li><%= link_to 'Game Art', portfolio_art_path %></li>
             </ul>
             <li><%= link_to "Sign Out", destroy_admin_session_path, method: :delete, id:"nav" %></li>
             </ul>
@@ -42,8 +42,8 @@
            <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="nav" role="button" aria-haspopup="true" aria-expanded="false">Portfolio <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><%= link_to 'Web Apps', portfolio_webapp_path, id: "nav" %></li>
-          <li><%= link_to 'Game Art', portfolio_art_path, id: "nav" %></li>
+          <li><%= link_to 'Web Apps', portfolio_webapp_path %></li>
+          <li><%= link_to 'Game Art', portfolio_art_path %></li>
           
             </ul>
         </li>
