--- a/app/views/portfolio/art.html.erb
+++ b/app/views/portfolio/art.html.erb
@@ -1,13 +1,16 @@
 <h1>Game Art</h1>
-<div id="posts" class="transitions-enabled">
+
+<div class="transitions-enabled" id="posts">
     <% @posts.each do |post| %>
         <div class="box panel panel-default">
             
         <%= link_to (image_tag post.image.url), post %>
-        <div class="panel-body">
-            <p> <%= post.title %> </p>
+         <div class="panel-body">
+            <p> <%= post.title %></p>
             
         </div>
+        </div>
+       
          
         
    <% end %>
