--- a/app/views/portfolio/webapp.html.erb
+++ b/app/views/portfolio/webapp.html.erb
@@ -5,9 +5,11 @@
             
         <%= link_to (image_tag post.image.url), post %>
         <div class="panel-body">
-            <p> <%= post.title %> </p>
+           <%= post.title %>
             
         </div>
+        </div>
+        
          
         
    <% end %>
