--- a/app/views/portfolio/about.html.erb
+++ b/app/views/portfolio/about.html.erb
@@ -1,12 +1,29 @@
 <div class="container-fluid">
 <div class="page-header">
-  <h1>About Me <small>Duron Epps</small></h1>
+  <h1>About Me</h1>
 </div>
-<div class="right-col">
-<h3>I am a web developer based in Manhatten, New York. I specialise in website design and development.</h3>
+<div class="left-col">
+<p>My name is Duron Epps. I am a game and web developer. I am from queens, New York </p>
+<p>I attended Bramson Ort College in Queens and received an AS degree in Game Design and Programming. I started using Unity3D and Unreal Engine, created my own little games</p>
+<p>I started to learn learn Ruby on rails development on my own time and I made a few web applications</p>
 <p>I create beautiful, usable, professional websites. All my websites are lovingly hand coded.</p>
 <p>When I design websites on the front end the weapons I use is Photoshop, CSS, Bootstrap. On the back-end I use ruby and the rails framework.</p>
 <p>I use git for version control and heroku for deployment</p>
-<h4>I am currently available for freelance work</h4>
+<p>To get in touch with me, use the contacts tab or directly with an <a href="mailto: duroneppsjr@hotmail.com?subject=Info">Email</a> If you have comments, criticism, or questions about my work, I'd love to hear it. I'll usually respond the same day, so feel free to contact me anytime. I am available for freelancing projects, whether it be with 3d models, cartoons, shorts, logos, games and apps. Contact me also for additional information and pricing.</p>
+
+<p>Software I use</p>
+<ul>
+    <li>Unity3D: extensive knowledge</li>
+    <li>Ruby on Rails: extensive knowledge</li>
+    <li>Maya: good extensive knowledge</li>
+    <li>Unreal Engine: General knowledge</li>
+    <li>Photoshop: good general knowledge</li>
+    
+    
+</ul>
+</div>
+<div class="right-col">
+    
+   <%= image_tag("") %> 
 </div>
 </div>
