--- a/app/views/portfolio/index.html.erb
+++ b/app/views/portfolio/index.html.erb
@@ -1,7 +1,79 @@
-<div class="center jumbotron">
-         <h2>DURON EPPS</h2>
-       
-  
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="6"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+     <%= image_tag("History_Of_Universe.png") %>
+      <div class="carousel-caption">
+        
+        <h3>Web App Ask About the universe</h3>
+        <p>You can ask questions about the universe and other users can answer them for you</p>
+      </div>
+    </div>
+   
+    <div class="item">
+      <%=image_tag("2015-12-10 (1).png") %>
+      <div class="carousel-caption">
+        <h3>Unreal Engine Level</h3>
+        <p>Level for this horror game i was working on</p>
+      </div>
+    </div>
+     <div class="item">
+      <%=image_tag("2015-12-10 (2).png") %>
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+     <div class="item">
+      <%=image_tag("2015-12-10 (4).png") %>
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+     <div class="item">
+      <%=image_tag("2015-12-10 (6).png") %>
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+     <div class="item">
+      <%=image_tag("2015-12-10.png") %>
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+     <div class="item">
+      <%=image_tag("AmbientOcclusion1.jpeg") %>
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+      <div class="item">
+      <%=image_tag("AmbientOcclusion2.jpeg") %>
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
   </div>
 
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
   
