--- a/app/views/portfolio/index.html.erb
+++ b/app/views/portfolio/index.html.erb
@@ -8,6 +8,7 @@
     <li data-target="#carousel-example-generic" data-slide-to="4"></li>
     <li data-target="#carousel-example-generic" data-slide-to="5"></li>
     <li data-target="#carousel-example-generic" data-slide-to="6"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="7"></li>
   </ol>
 
   <!-- Wrapper for slides -->
@@ -16,52 +17,50 @@
      <%= image_tag("History_Of_Universe.png") %>
       <div class="carousel-caption">
         
-        <h3>Web App Ask About the universe</h3>
-        <p>You can ask questions about the universe and other users can answer them for you</p>
+        
       </div>
     </div>
    
     <div class="item">
       <%=image_tag("2015-12-10 (1).png") %>
       <div class="carousel-caption">
-        <h3>Unreal Engine Level</h3>
-        <p>Level for this horror game i was working on</p>
+        
       </div>
     </div>
      <div class="item">
       <%=image_tag("2015-12-10 (2).png") %>
       <div class="carousel-caption">
-        ...
+        
       </div>
     </div>
      <div class="item">
       <%=image_tag("2015-12-10 (4).png") %>
       <div class="carousel-caption">
-        ...
+        
       </div>
     </div>
      <div class="item">
       <%=image_tag("2015-12-10 (6).png") %>
       <div class="carousel-caption">
-        ...
+        
       </div>
     </div>
      <div class="item">
       <%=image_tag("2015-12-10.png") %>
       <div class="carousel-caption">
-        ...
+        
       </div>
     </div>
      <div class="item">
       <%=image_tag("AmbientOcclusion1.jpeg") %>
       <div class="carousel-caption">
-        ...
+        
       </div>
     </div>
       <div class="item">
       <%=image_tag("AmbientOcclusion2.jpeg") %>
       <div class="carousel-caption">
-        ...
+        
       </div>
     </div>
   </div>
