--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,7 +17,9 @@
  @import "bootstrap-sprockets";
 @import "bootstrap";
 
-
+.embed-responsive{
+	margin-top: 20px;
+}
 
 #posts {
   margin: 0 auto;
@@ -28,9 +30,11 @@
 	  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
 	  border-radius: 7px;
 	  text-align: center;
+	  position: relative;
 	  img {
 	  	max-width: 100%;
 	  	height: auto;
+	  	
 	  }
 	  h2 {
 	  	font-size: 22px;
