--- a/app/views/portfolio/art.html.erb
+++ b/app/views/portfolio/art.html.erb
@@ -1,4 +1,16 @@
 <h1>Game Art</h1>
+<!-- 16:9 aspect ratio -->
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/BKHN5RDJUak" frameborder="0" allowfullscreen></iframe>
+  
+</div>
+
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8WIncfqZx-E" frameborder="0" allowfullscreen></iframe>
+  
+</div>
+
+
 
 <div class="transitions-enabled" id="posts">
     <% @posts.each do |post| %>
