Fixed about page

--- a/app/views/portfolio/about.html.erb
+++ b/app/views/portfolio/about.html.erb
@@ -5,6 +5,7 @@
 <div class="left-col">
 <p>My name is Duron Epps. I am a game and web developer. I am from queens, New York </p>
 <p>I attended Bramson Ort College in Queens and received an AS degree in Game Design and Programming. I started using Unity3D and Unreal Engine, created my own little games</p>
+<p>I use Autodesk Maya and ZBrush To create my own game assets</p>
 <p>I started to learn learn Ruby on rails development on my own time and I made a few web applications</p>
 <p>I create beautiful, usable, professional websites. All my websites are lovingly hand coded.</p>
 <p>When I design websites on the front end the weapons I use is Photoshop, CSS, Bootstrap. On the back-end I use ruby and the rails framework.</p>
@@ -18,6 +19,7 @@
     <li>Maya: good extensive knowledge</li>
     <li>Unreal Engine: General knowledge</li>
     <li>Photoshop: good general knowledge</li>
+    <li>ZBrush: good general knowledge</li>
     
     
 </ul>
