added meta tags

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+<meta name="description" content="Duron Epps online porfolio game art and web apps">
+<meta name="keywords" content="Games, Maya, Zbrush, Unity5, ruby on rails, unreal engine ">
+<meta name="author" content="Duron Epps">
   <title>Duron Epps</title>
   <script src="https://code.jquery.com/jquery-3.1.0.js" integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk=" crossorigin="anonymous"></script>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
