added panels that link to my portfolio

--- a/app/views/portfolio/about.html.erb
+++ b/app/views/portfolio/about.html.erb
@@ -10,7 +10,7 @@
 <p>I create beautiful, usable, professional websites. All my websites are lovingly hand coded.</p>
 <p>When I design websites on the front end the weapons I use is Photoshop, CSS, Bootstrap. On the back-end I use ruby and the rails framework.</p>
 <p>I use git for version control and heroku for deployment</p>
-<p>To get in touch with me, use the contacts tab or directly with an <a href="mailto: duroneppsjr@hotmail.com?subject=Info">Email</a> If you have comments, criticism, or questions about my work, I'd love to hear it. I'll usually respond the same day, so feel free to contact me anytime. I am available for freelancing projects, whether it be with 3d models, cartoons, shorts, logos, games and apps. Contact me also for additional information and pricing.</p>
+<p>To get in touch with me, use the contacts tab or directly with an <%= mail_to "duroneppsjr@outlook.com", "Email", subject: "Info" %> If you have comments, criticism, or questions about my work, I'd love to hear it. I'll usually respond the same day, so feel free to contact me anytime. I am available for freelancing projects, whether it be with 3d models, cartoons, shorts, logos, games and apps. Contact me also for additional information and pricing.</p>
 
 <p>Software I use</p>
 <ul>
