--- a/app/views/portfolio/index.html.erb
+++ b/app/views/portfolio/index.html.erb
@@ -75,4 +75,29 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+<br>
+
+<div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <%= link_to image_tag('official-web-design-development-icon.png'), portfolio_webapp_path %>
+      <div class="caption">
+        <h3>Web Portfolio</h3>
+        <p>...</p>
+        
+      </div>
+    </div>
+  </div>
+  
+   <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <%= link_to image_tag('GA_word_0.png'), portfolio_art_path %>
+      <div class="caption">
+        <h3>Web Portfolio</h3>
+        <p>...</p>
+        
+      </div>
+    </div>
+  </div>
+</div>
   
