added webapps to portfolio

--- a/app/views/portfolio/about.html.erb
+++ b/app/views/portfolio/about.html.erb
@@ -24,8 +24,8 @@
     
 </ul>
 </div>
-<div class="right-col">
+<div class="right-col profile_pic">
     
-   <%= image_tag("") %> 
+   <%= image_tag("profile_pic.jpg")%> 
 </div>
 </div>
