--- a/app/views/portfolio/index.html.erb
+++ b/app/views/portfolio/index.html.erb
@@ -93,7 +93,7 @@
     <div class="thumbnail">
       <%= link_to image_tag('GA_word_0.png'), portfolio_art_path %>
       <div class="caption">
-        <h3>Web Portfolio</h3>
+        <h3>Game Art Portfolio</h3>
         <p>...</p>
         
       </div>
