--- a/app/views/portfolio/webapp.html.erb
+++ b/app/views/portfolio/webapp.html.erb
@@ -1,13 +1,74 @@
 <h1>Web Apps</h1>
+<br>
+
+
+
+<div class="row">
+    
+    <div class="col-md-6">
+        <a class="center" href="https://vast-sierra-96353.herokuapp.com/">
+        <div class="thumbnail">
+            <%= image_tag("DevMatchApp.png") %>
+            <div class="caption">
+            Dev Match App</a>
+            </div>
+        </div>
+        
+    </div>
+    
+    
+       <div class="col-md-6">
+           <a class="center" href="https://myrecipesd.herokuapp.com/">
+        <div class="thumbnail">
+            <%= image_tag("MyRecipeApp.png") %>
+            <div class="caption">
+            <a class="center" href="https://myrecipesd.herokuapp.com/">Dev Match App</a>
+            </div>
+        </div>
+        
+    </div>
+    
+  
+</div>
+
+
+<div class="row">
+    <div class="col-md-6">
+        <a href="">
+            <div class="thumbnail">
+                <%= image_tag("InstagramApp.png") %>
+                <div class="caption">
+                    <a href="https://arcane-dawn-47878.herokuapp.com">Instagram Clone App</a>
+                </div>
+            </div>
+        </a>
+    </div>
+    
+        <div class="col-md-6">
+        <a href="">
+            <div class="thumbnail">
+                <%= image_tag("History_Of_Universe.png") %>
+                <div class="caption">
+                    <a href="https://fast-fjord-85254.herokuapp.com/">Ask About the Universe App</a>
+                </div>
+            </div>
+        </a>
+    </div>
+    
+</div>
+
+<br>
 <div id="posts" class="transitions-enabled">
     <% @posts.each do |post| %>
         <div class="box panel panel-default">
             
-        <%= link_to (image_tag post.image.url), post %>
+        
         <div class="panel-body">
-           <%= post.title %>
+            <%= link_to (image_tag post.image.url), post %>
+           
             
         </div>
+        <%= post.title %>
         </div>
         
          
