added game art to game art page

--- a/app/views/portfolio/art.html.erb
+++ b/app/views/portfolio/art.html.erb
@@ -9,6 +9,30 @@
   <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8WIncfqZx-E" frameborder="0" allowfullscreen></iframe>
   
 </div>
+<br>
+
+<div class="row">
+    
+    <div class="col-md-4">
+        <div class="thumbnail">
+            <%= image_tag("AmbientOcclusion1.jpeg") %>
+        </div>
+    </div>
+    
+     <div class="col-md-4">
+        <div class="thumbnail">
+            <%= image_tag("AmbientOcclusion2.jpeg") %>
+        </div>
+    </div>
+    
+     <div class="col-md-4">
+        <div class="thumbnail">
+            <%= image_tag("AmbientOcclusion3.jpeg") %>
+        </div>
+    </div>
+    
+    
+</div>
 
 <!-- <div class="embed-responsive embed-responsive-16by9">-->
 <!--<iframe src="https://www.dropbox.com/home/Tiger%20Nine%20Game?preview=Tiger+Nine+Game.html"></iframe>-->
