added picture to about page

--- a/app/views/portfolio/about.html.erb
+++ b/app/views/portfolio/about.html.erb
@@ -24,8 +24,9 @@
     
 </ul>
 </div>
-<div class="right-col profile_pic">
-    
-   <%= image_tag("profile_pic.jpg")%> 
+<div class="right-col">
+    <div class="thumbnail">
+   <%= image_tag("profile_pic.jpg")%>
+   </div>
 </div>
 </div>
