added picture to about page

--- a/app/views/portfolio/about.html.erb
+++ b/app/views/portfolio/about.html.erb
@@ -2,7 +2,8 @@
 <div class="page-header">
   <h1>About Me</h1>
 </div>
-<div class="left-col">
+<div class="row">
+<div class=" col-md-6">
 <p>My name is Duron Epps. I am a game and web developer. I am from queens, New York </p>
 <p>I attended Bramson Ort College in Queens and received an AS degree in Game Design and Programming. I started using Unity3D and Unreal Engine, created my own little games</p>
 <p>I use Autodesk Maya and ZBrush To create my own game assets</p>
@@ -24,9 +25,10 @@
     
 </ul>
 </div>
-<div class="right-col">
+<div class=" col-md-6">
     <div class="thumbnail">
    <%= image_tag("profile_pic.jpg")%>
    </div>
+</div>
 </div>
 </div>
