Added more projects to webapp section

--- a/app/views/portfolio/webapp.html.erb
+++ b/app/views/portfolio/webapp.html.erb
@@ -57,6 +57,49 @@
     
 </div>
 
+<div class="row">
+    <div class="col-md-6">
+        <a href="">
+            <div class="thumbnail">
+                <%= image_tag("BroadwayApp.png") %>
+                <div class="caption">
+                    <a href="https://broadway-app.herokuapp.com/">Instagram Clone App</a>
+                </div>
+            </div>
+        </a>
+    </div>
+    
+        <div class="col-md-6">
+        <a href="">
+            <div class="thumbnail">
+                <%= image_tag("EspnFanForumApp.png") %>
+                <div class="caption">
+                    <a href="https://espn-de.herokuapp.com/">Ask About the Universe App</a>
+                </div>
+            </div>
+        </a>
+    </div>
+    
+</div>
+
+<div class="row">
+    <div class="col-md-6">
+        <a href="">
+            <div class="thumbnail">
+                <%= image_tag("FileCabinetApp.png") %>
+                <div class="caption">
+                    <a href="https://file-cab-net.herokuapp.com/">Instagram Clone App</a>
+                </div>
+            </div>
+        </a>
+    </div>
+    
+ 
+    
+</div>
+
+
+
 <br>
 <div id="posts" class="transitions-enabled">
     <% @posts.each do |post| %>
