fixed the names of webapps

--- a/app/views/portfolio/art.html.erb
+++ b/app/views/portfolio/art.html.erb
@@ -34,6 +34,29 @@
     
 </div>
 
+<div class="row">
+    
+    <div class="col-md-4">
+        <div class="thumbnail">
+            <%= image_tag("2015-12-10 (1).png") %>
+        </div>
+    </div>
+    
+     <div class="col-md-4">
+        <div class="thumbnail">
+            <%= image_tag("2015-12-10 (2).png") %>
+        </div>
+    </div>
+    
+     <div class="col-md-4">
+        <div class="thumbnail">
+            <%= image_tag("2015-12-10 (4).png") %>
+        </div>
+    </div>
+    
+    
+</div>
+
 <!-- <div class="embed-responsive embed-responsive-16by9">-->
 <!--<iframe src="https://www.dropbox.com/home/Tiger%20Nine%20Game?preview=Tiger+Nine+Game.html"></iframe>-->
 <!--</div>-->
