--- a/app/views/portfolio/webapp.html.erb
+++ b/app/views/portfolio/webapp.html.erb
@@ -22,7 +22,7 @@
         <div class="thumbnail">
             <%= image_tag("MyRecipeApp.png") %>
             <div class="caption">
-            <a class="center" href="https://myrecipesd.herokuapp.com/">Dev Match App</a>
+            <a class="center" href="https://myrecipesd.herokuapp.com/">Recipe App</a>
             </div>
         </div>
         
@@ -63,7 +63,7 @@
             <div class="thumbnail">
                 <%= image_tag("BroadwayApp.png") %>
                 <div class="caption">
-                    <a href="https://broadway-app.herokuapp.com/">Instagram Clone App</a>
+                    <a href="https://broadway-app.herokuapp.com/">Broadway App</a>
                 </div>
             </div>
         </a>
@@ -74,7 +74,7 @@
             <div class="thumbnail">
                 <%= image_tag("EspnFanForumApp.png") %>
                 <div class="caption">
-                    <a href="https://espn-de.herokuapp.com/">Ask About the Universe App</a>
+                    <a href="https://espn-de.herokuapp.com/">ESPN App</a>
                 </div>
             </div>
         </a>
