added linkedin and twitter links

--- a/app/views/portfolio/index.html.erb
+++ b/app/views/portfolio/index.html.erb
@@ -99,5 +99,15 @@
       </div>
     </div>
   </div>
+   <div class="col-md-4">
+        <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="duroneppsjr"><a class="LI-simple-link" href='https://www.linkedin.com/in/duroneppsjr?trk=profile-badge'>Duron Epps JR</a></div>
+    </div>
+</div>
+<div class="row">
+   
+    
+    <div class="col-md-4">
+        
+    </div>
 </div>
   
