--- a/app/views/portfolio/about.html.erb
+++ b/app/views/portfolio/about.html.erb
@@ -1,6 +1,7 @@
 <div class="container-fluid">
 <div class="page-header">
   <h1>About Me</h1>
+  <a href="https://twitter.com/NinjaFromQueens" class="twitter-follow-button" data-show-count="false">Follow @NinjaFromQueens</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
 <div class="row">
 <div class=" col-md-6">
@@ -31,4 +32,6 @@
    </div>
 </div>
 </div>
+
+
 </div>
