updated about page

--- a/app/views/portfolio/about.html.erb
+++ b/app/views/portfolio/about.html.erb
@@ -14,7 +14,7 @@
 <p>I use git for version control and heroku for deployment</p>
 <p>To get in touch with me, use the contacts tab or directly with an <%= mail_to "duroneppsjr@outlook.com", "Email", subject: "Info" %> If you have comments, criticism, or questions about my work, I'd love to hear it. I'll usually respond the same day, so feel free to contact me anytime. I am available for freelancing projects, whether it be with 3d models, cartoons, shorts, logos, games and apps. Contact me also for additional information and pricing.</p>
 
-<p>Software I use</p>
+<p>Software I Use</p>
 <ul>
     <li>Unity3D: extensive knowledge</li>
     <li>Ruby on Rails: extensive knowledge</li>
