--- a/app/views/portfolio/webapp.html.erb
+++ b/app/views/portfolio/webapp.html.erb
@@ -101,21 +101,21 @@
 
 
 <br>
-<div id="posts" class="transitions-enabled">
-    <% @posts.each do |post| %>
-        <div class="box panel panel-default">
+<!--<div id="posts" class="transitions-enabled">-->
+<!--    <% @posts.each do |post| %>-->
+<!--        <div class="box panel panel-default">-->
             
         
-        <div class="panel-body">
-            <%= link_to (image_tag post.image.url), post %>
+<!--        <div class="panel-body">-->
+<!--            <%= link_to (image_tag post.image.url), post %>-->
            
             
-        </div>
-        <%= post.title %>
-        </div>
+<!--        </div>-->
+<!--        <%= post.title %>-->
+<!--        </div>-->
         
          
         
-   <% end %>
+<!--   <% end %>-->
     
 </div>
