change the layout of game art page

--- a/app/views/portfolio/art.html.erb
+++ b/app/views/portfolio/art.html.erb
@@ -13,42 +13,48 @@
 
 <div class="row">
     
-    <div class="col-md-4">
+    <div class="col-md-6">
         <div class="thumbnail">
             <%= image_tag("AmbientOcclusion1.jpeg") %>
         </div>
     </div>
     
-     <div class="col-md-4">
+     <div class="col-md-6">
         <div class="thumbnail">
             <%= image_tag("AmbientOcclusion2.jpeg") %>
         </div>
     </div>
     
-     <div class="col-md-4">
-        <div class="thumbnail">
-            <%= image_tag("AmbientOcclusion3.jpeg") %>
-        </div>
-    </div>
+
     
     
 </div>
 
 <div class="row">
-    
-    <div class="col-md-4">
+         <div class="col-md-6">
+        <div class="thumbnail">
+            <%= image_tag("AmbientOcclusion3.jpeg") %>
+        </div>
+    </div>
+     <div class="col-md-6">
         <div class="thumbnail">
             <%= image_tag("2015-12-10 (1).png") %>
         </div>
     </div>
     
-     <div class="col-md-4">
+</div>
+
+<div class="row">
+    
+   
+    
+     <div class="col-md-6">
         <div class="thumbnail">
             <%= image_tag("2015-12-10 (2).png") %>
         </div>
     </div>
     
-     <div class="col-md-4">
+     <div class="col-md-6">
         <div class="thumbnail">
             <%= image_tag("2015-12-10 (4).png") %>
         </div>
